--- a/src/app/product/[id]/page.css
+++ b/src/app/product/[id]/page.css
@@ -3,3 +3,48 @@
     top: 0;
     left: 50%;
 }
+.left{
+    width: 50%;
+    flex-direction: column;
+    padding: 40px 0;
+}
+.right{
+width: 50%;
+padding: 48px 0 ;
+}
+.rightmain{
+    padding: 48px 0 48px 40px;
+}
+.maim{
+    flex-direction: row;
+}
+.leftmain{
+    margin-bottom: 12px;
+}
+@media (max-width:900px) {
+    .hide{
+        display: none;
+    }
+    .main{
+        flex-direction: column;
+    }
+    .left{
+        width: 100%;
+        padding: 5px 0;
+        justify-content: center;
+        align-items: center;
+    }
+    .right{
+        width: 100%;
+        padding: 10px 0 ;
+    }
+    .rightmain{
+        padding: 15px;
+    }
+    .leftmain{
+        margin-bottom: 5px;
+    }
+    .policy{
+        display: none;
+    }
+}
