--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,16 +15,11 @@ body{
     background: transparent;
   }
 /* navbar section  */
-.logo h1{
+.logo .text{
     background-color: #4158D0;
 background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 -webkit-text-fill-color: transparent;
 -webkit-background-clip: text;
-/* text-shadow: 0px 1px 1px rgba(3, 7, 18, 0.16),
-  0px 2px 2px rgba(3, 7, 18, 0.13),
-  0px 4px 4px rgba(3, 7, 18, 0.10),
-  0px 8px 8px rgba(3, 7, 18, 0.06),
-  0px 16px 16px rgba(3, 7, 18, 0.03); */
 }
 nav{
     padding: 16px 28px;
