--- a/src/app/product/[id]/page.css
+++ b/src/app/product/[id]/page.css
@@ -26,9 +26,17 @@ padding: 48px 0 ;
     padding-bottom: 12px;
 }
 @media (max-width:900px) {
-    .hide{
-        display: none;
+    .hides{
+display: none;
+
     }
+    /* .scroll{
+        width: 100%;
+        height: 700px;
+        overflow-y: scroll;
+        padding-bottom: 100px;
+        scrollbar-width: none;
+    } */
     .main{
         flex-direction: column;
     }
@@ -65,6 +73,3 @@ padding: 48px 0 ;
         border-top: 1px solid #D4D4D8;
     }
 }
-
-
-
